@@ -84,6 +84,7 @@ runtime_mallocgc(uintptr size, uintptr typ, uint32 flag)
 	MLink *v, *next;
 	byte *tiny;
 	bool incallback;
+	void *closure;
 
 	if(size == 0) {
 		// All 0-length allocations use this pointer.
@@ -94,6 +95,10 @@ runtime_mallocgc(uintptr size, uintptr typ, uint32 flag)
 
 	m = runtime_m();
 	g = runtime_g();
+
+	// We should not be called in between __go_set_closure and the
+	// actual function call, but cope with it if we are.
+	closure = g->closure;
 
 	incallback = false;
 	if(m->mcache == nil && g->ncgo > 0) {
@@ -175,6 +180,7 @@ runtime_mallocgc(uintptr size, uintptr typ, uint32 flag)
 					m->locks--;
 					if(incallback)
 						runtime_entersyscall();
+					g->closure = closure;
 					return v;
 				}
 			}
@@ -263,6 +269,8 @@ runtime_mallocgc(uintptr size, uintptr typ, uint32 flag)
 
 	if(incallback)
 		runtime_entersyscall();
+
+	g->closure = closure;
 
 	return v;
 }
